Bug 396510 - Search prev/next does not wrap around for certain text
Summary: Search prev/next does not wrap around for certain text
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-14 17:41 UTC by Kurt Hindenburg
Modified: 2025-04-12 19:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kurt Hindenburg 2018-07-14 17:41:52 UTC
This is not related to recent searchbar changes which will be in 18.08

1. seq 1000
2. Deselect options 'Search backwards'
3. open search and enter 00
4. press down arrow for next search

Also happens other way
2. select 'Search backwards'
4. press down arrow for prev search

Expected: should wrap around to top 100
Actual: line stuck on 1000

I think it gets confused about the '000' when searching for 00
Comment 1 Justin Zobel 2020-11-03 02:23:23 UTC
I can confirm it won't wrap but is it supposed to? Do you have an example where it will wrap?
Comment 2 Bug Janitor Service 2020-11-18 04:33:50 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2020-12-03 04:34:06 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 4 Christoph Cullmann 2025-04-12 19:21:53 UTC
Git commit b83680a69328eb4fc7d32949406696b2fb00a0dc by Christoph Cullmann, on behalf of Wendi Gan.
Committed on 12/04/2025 at 18:15.
Pushed by cullmann into branch 'master'.

Fix search wrapping behavior at boundaries

Issues:
- At the second-to-last line, "Find Next" doesn't wrap to the start.
- At the second line, "Find Previous" doesn't wrap to the end.

These issues occurred because the initial value of startLine equaled endLine, causing the loop to terminate after one cycle.

Changes:
- Added a continueLoop flag: In wrap mode, the loop only terminates when hasWrapped is true.
- Added an invertDirection flag to control the continueLoop flag in no-wrap mode.

M  +16   -4    src/SearchHistoryTask.cpp

https://invent.kde.org/utilities/konsole/-/commit/b83680a69328eb4fc7d32949406696b2fb00a0dc