Fix search wrapping behavior at boundaries

Issues:
- At the second-to-last line, "Find Next" doesn't wrap to the start.
- At the second line, "Find Previous" doesn't wrap to the end.

These issues occurred because the initial value of startLine equaled endLine, causing the loop to terminate after one cycle.

Changes:
- Added a continueLoop flag: In wrap mode, the loop only terminates when hasWrapped is true.
- Added an invertDirection flag to control the continueLoop flag in no-wrap mode.

BUG: 396510